# light-db

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  STYLE.txt  start.sh
debug/: debug_1.gdb  debug_2.gdb
doc/jf/: .gitignore  arbeit.tex  image-structure.xopp  kurzbeschreibung.md  kurzbeschreibung.txt  project_overview.tex  references.bib  sources.txt
doc/jf/res/: references.bib
doc/plotting/: b-tree.py
doc/posters/: poster_1.odg  poster_2.odg  poster_b_tree_socket.odg
doc/results/: benchmarks_laptop_2.txt  benchmarks_pc_2.txt  convert.py  data_laptop_1.txt  data_pc_2.txt
doc/sources/: Database management system performance comparisons: A systematic literature review.html  resources.txt  sources.txt
res/: cert-key-pair.sh
results/: benchmarks.txt  benchmarks_laptop_1.txt  data_laptop_2.txt  data_pc_1.txt
scripts/: bench.sh  debug.sh  openssl.sh  start.sh
src/bench/: data.py  debug.gdb  main.cpp  read_csv.cpp  timer.cpp
src/client/: client.cpp  client.hpp  client_class.cpp  client_class.hpp  client_funcs.cpp  client_main.cpp  client_s_funcs.cpp  client_socket_funcs.cpp  database_client.cpp  main.cpp  socket_client.cpp  socket_client.hpp
src/client/py/: client.py
src/database/: binary_tree.cpp  btree.cpp  database-client.cpp  database.cpp  db_util.cpp  fs_b_tree.cpp  graphdb.cpp  rtree.cpp  sorted_array.cpp
src/include/: binary_tree.hpp  btree.hpp  client.hpp  client_class.hpp  client_config.hpp  client_funcs.hpp  database-client.hpp  database.hpp  database_constants.hpp  db_util.hpp  fs_b_tree.hpp  graphdb.hpp  listener.hpp  rtree.hpp  server.hpp  server_constants.hpp  shared.hpp  socket.hpp  socket_client.hpp  socket_funcs.hpp  socket_shared.hpp  sorted_array.hpp  structs.hpp  tcp_socket_server.hpp  timer.hpp  util.hpp  worker.hpp
src/server/: database_class.cpp  database_class.hpp  listener.cpp  listener.hpp  main.cpp  server.cpp  server.hpp  server_class.cpp  server_class.hpp  server_config.hpp  server_main.cpp  server_s_funcs.cpp  server_socket_funcs.cpp  socket_server.cpp  socket_server.hpp  structs.hpp  tcp_socket_server.cpp  util.cpp  util.hpp  worker.cpp  worker.hpp
src/server/tcp_socket_server/: listener.cpp  worker.cpp
src/shared/: shared_funcs.cpp  shared_socket_funcs.cpp  socket_shared.cpp  socket_shared.hpp
src/socket/: socket.cpp  socket_client.cpp  socket_funcs.cpp  socket_server.cpp  socket_shared.cpp
src/sockets/: listener.cpp  socket_client.cpp  socket_server.cpp  socket_shared.cpp
src/testing/: debug.gdb  main.cpp  printing.cpp
test/bench/: data.py  debug.gdb  header.hpp
test/testing/: debug.gdb  main.cpp
testing/: CMakeLists.txt  Makefile
testing/bench/: header.hpp  main.cpp
testing/test/: main.cpp
tls/: cert-key-pair.sh  cert.pem  key.pem
